# tp-procesamiento-imagenes

./: .gitignore  CMakeLists.txt  README.md  displayImage.cpp  procesarImagen.asm  valorRGBLineal.asm  valorYComprimido.asm
include/: common.h  image_processing.h
src/: asm_functions.asm  display_image.cpp  procesarImagen.asm  valorRGBLineal.asm  valorYComprimido.asm
